# gfx

./: .gitmodules  Build.bat  CMakeLists.txt  CompileShaders.bat  CompileTImes.txt  README.md  Shader  TODO  frag.spv  imgui.ini  vert.spv
ext/glslang/lib/: GenericCodeGend.lib  HLSLd.lib  OGLCompilerd.lib  OSDependentd.lib  glslang-default-resource-limitsd.lib  glslangd.lib
ext/glslang/lib/cmake/: HLSLTargets.cmake  OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  SPVRemapperTargets.cmake  glslangTargets.cmake  glslangValidatorTargets.cmake  spirv-remapTargets.cmake
ext/glslang/lib/cmake/glslang/: glslang-targets-debug.cmake  glslang-targets.cmake
ext/vma/lib/: VulkanMemoryAllocator.lib  VulkanMemoryAllocatord.lib
resources/Hlgfx/Shaders/Common/: BRDF.glsl  Bindings.h  Macros.glsl  Macros.hlsl  Material.glsl  Tonemapping.glsl
resources/Hlgfx/Shaders/Deferred/: Composition.glsl  Composition.hlsl  Composition.json  GBuffer.glsl  GBuffer.hlsl  GBuffer.json
resources/Hlgfx/Shaders/PBR/: BRDF.glsl  Material.glsl  PBR.glsl  PBR.hlsl  PBR.json  Tonemapping.glsl  Util.glsl
resources/Hlgfx/Shaders/RTX/: Reflections.json  anyHit.rahit.glsl  closestHit.rchit.glsl  raygen.rgen.glsl
resources/Hlgfx/Shaders/ShadowMaps/: ShadowMaps.glsl  ShadowMaps.hlsl  ShadowMaps.json
resources/Hlgfx/Shaders/Unlit/: Unlit.glsl  Unlit.hlsl  Unlit.json
resources/Shaders/: Cube.frag  GenerateMipmaps.hlsl  Triangle.json  TriangleD12.json  Triangle_Instanced.json  Triangle_MultiStream.json  cube.hlsl  cube.json  cube.vert  shaders.hlsl  triangle.frag  triangle.vert  triangleInstanced.frag  triangleInstanced.hlsl  triangleInstanced.vert
resources/Shaders/Common/: Macros.glsl  Macros.hlsl
resources/Shaders/Compute/: Compute.json  Triangle_Compute.json  compute.glsl  compute.hlsl  triangleCompute.glsl  triangleCompute.hlsl
resources/Shaders/Cube/: Macros.hlsl  cube.glsl  cube.json
resources/Shaders/CubeMap/: Macros.hlsl  cubeMap.glsl  cubeMap.hlsl  cubeMap.json
resources/Shaders/Instancing/: Triangle_Instanced.json  triangleInstanced.glsl  triangleInstanced.hlsl
resources/Shaders/OffscreenRenderTarget/: Triangle.json  TriangleOffscreen.json  triangle.glsl  triangle.hlsl  triangleOffscreen.glsl  triangleOffscreen.hlsl
resources/Shaders/RTX/: Quad.json  TriangleRTX.json  closestHitRed.rchit.glsl  missRed.rmiss.glsl  quad.glsl  raygen.rgen.glsl
resources/Shaders/StorageBuffer/: Triangle_StorageBuffer.json  triangleStorageBuffer.hlsl
resources/Shaders/Triangle/: Triangle_MultiStream.json  triangle.glsl  triangle.hlsl
resources/Shaders/glsl/: triangle.frag  triangle.vert
resources/Shaders/spirv/: triangle.frag.spv  triangle.vert.spv
src/: Main.cpp  Main_HelloCompute.cpp  Main_HelloCube.cpp  Main_HelloCubeMap.cpp  Main_HelloHLGFX.cpp  Main_HelloImgui.cpp  Main_HelloRayTracing.cpp  Main_HelloTriangle.cpp  Main_HelloTriangle_Compute.cpp  Main_HelloTriangle_Indexed.cpp  Main_HelloTriangle_Instanced.cpp  Main_HelloTriangle_MultiSampling.cpp  Main_HelloTriangle_MultiVertexStreams.cpp  Main_HelloTriangle_OffscreenRenderTarget.cpp  Main_HelloTriangle_StorageBuffer.cpp  Save.cpp
src/App/: App.h  Types.h  Window.cpp  Window.h
src/Gfx/: Api.h  Apis.h
src/Gfx/Common/: Context.cpp  Framebuffer.cpp  Image.cpp  Memory.cpp  Pipeline.cpp  ResourceManager.cpp  Uniform.cpp  Util.cpp  Util.h
src/Gfx/D3D11/: D11Buffer.cpp  D11Buffer.h  D11CommandBuffer.cpp  D11CommandBuffer.h  D11Common.h  D11Context.cpp  D11Context.h  D11Framebuffer.cpp  D11Framebuffer.h  D11Image.cpp  D11Image.h  D11Imgui.cpp  D11Mapping.cpp  D11Mapping.h  D11Pipeline.cpp  D11Pipeline.h  D11ResourceManager.cpp  D11Swapchain.cpp  D11Swapchain.h
src/Gfx/D3D12/: D12Buffer.cpp  D12Buffer.h  D12CommandBuffer.cpp  D12CommandBuffer.h  D12Common.h  D12Context.cpp  D12Context.h  D12Framebuffer.cpp  D12Framebuffer.h  D12GfxContext.cpp  D12GfxContext.h  D12Image.cpp  D12Image.h  D12Imgui.cpp  D12Mapping.cpp  D12Mapping.h  D12Pipeline.cpp  D12Pipeline.h  D12ResourceManager.cpp  D12Swapchain.cpp  D12Swapchain.h  D12Uniform.cpp  D12Uniform.h  D12VirtualFrames.cpp  D12VirtualFrames.h
src/Gfx/D3D12/Include/: GfxContext.h  Types.h
src/Gfx/GL/: GLBuffer.cpp  GLBuffer.h  GLCommandBuffer.cpp  GLCommandBuffer.h  GLCommon.h  GLContext.cpp  GLContext.h  GLFramebuffer.h  GLImage.cpp  GLImage.h  GLImgui.cpp  GLMapping.cpp  GLMapping.h  GLPipeline.cpp  GLPipeline.h  GLResourceManager.cpp  GLShader.cpp  GLShader.h  GLUniform.cpp  GLUniform.h
src/Gfx/Include/: AccelerationStructure.h  Buffer.h  CommandBuffer.h  Context.h  Framebuffer.h  GfxContext.h  Image.h  Imgui.h  ImguiHelper.h  Memory.h  Pipeline.h  RenderPass.h  RenderTarget.h  ResourceManager.h  Shader.h  Swapchain.h  Types.h  Uniform.h  VertexInput.h
src/Gfx/OpenGL/: Api.h  CommandBuffer.h
src/Gfx/OpenGL/Include/: Pipeline.h
src/Gfx/VK/: CommandBuffer.cpp  GfxContext.cpp  Image.cpp  Mapping.h  VKImgui.cpp  VkAccelerationStructure.cpp  VkAccelerationStructure.h  VkBuffer.cpp  VkBuffer.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkCommon.h  VkContext.cpp  VkContext.h  VkFramebuffer.h  VkGfxContext.cpp  VkGfxContext.h  VkImage.cpp  VkImage.h  VkMapping.cpp  VkMapping.h  VkMemoryAllocation.cpp  VkMemoryAllocation.h  VkPipeline.cpp  VkPipeline.h  VkRenderPass.h  VkResourceManager.cpp  VkResourceManager.h  VkShader.cpp  VkShader.h  VkSwapchain.h  VkUniform.cpp  VkUniform.h  VkUtil.h  VkVmaUsage.cpp  vkVirtualFrames.cpp  vkVirtualFrames.h
src/Gfx/Vulkan/Include/: Buffer.h  Swapchain.h
src/Gfx/_Empty/: Api.h
src/Gfx/_Empty/Include/: GfxContext.h  Types.h
src/Hlgfx/: Camera.cpp  CameraController.cpp  Context.cpp  GUI.cpp  Geometry.cpp  Light.cpp  Material.cpp  Mesh.cpp  Object3D.cpp  Renderer.cpp  Scene.cpp  Texture.cpp  Transform.cpp  Util.cpp
src/Hlgfx/Include/: Api.h  Bindings.h  Camera.h  CameraController.h  Context.h  GUI.h  Geometry.h  Light.h  Material.h  Mesh.h  Object3D.h  Renderer.h  Scene.h  Texture.h  Transform.h  Types.h  Util.h
src/Hlgfx/Loaders/: Assimp.cpp  Assimp.h  GLTF.cpp  GLTF.h
test/: Commands.h  Main.cpp  Row.h  Table.h  Util.h
(+2 files in other folders)
